--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,4 +1,9 @@
 body {
+  background-image: url(https://images.unsplash.com/photo-1569470451072-68314f596aec?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
   background-color: #10100e;
   color: #ffffff;
   display: flex;
@@ -13,7 +18,7 @@ body {
 }
 
 .title {
-  font-size: 80px;
+  font-size: 90px;
   margin-bottom: 100px;
   color: #30d801;
   text-shadow: 0 0 5px rgba(106, 90, 90, 0.7),
@@ -57,5 +62,5 @@ body {
 }
 
 .button:hover {
-  background-color: rgb(62, 101, 39);
+  background-color: rgb(74, 109, 50);
 }
